trunk/Archive2/d0/ee532bdb8863f1/output
main.cpp:3:1: warning: type specifier missing, defaults to 'int' [-Wimplicit-int]
main () 
^~~~
main.cpp:6:27: warning: implicit conversion loses floating-point precision: 'double' to 'float' [-Wconversion]
  float ultarCloud [9] = {12.04, 17.33, 8.9, 2.1, 13.75, 23.2, 25.0, 19.0, 5.34}; 
                         ~^~~~~
main.cpp:6:34: warning: implicit conversion loses floating-point precision: 'double' to 'float' [-Wconversion]
  float ultarCloud [9] = {12.04, 17.33, 8.9, 2.1, 13.75, 23.2, 25.0, 19.0, 5.34}; 
                         ~       ^~~~~
main.cpp:6:41: warning: implicit conversion loses floating-point precision: 'double' to 'float' [-Wconversion]
  float ultarCloud [9] = {12.04, 17.33, 8.9, 2.1, 13.75, 23.2, 25.0, 19.0, 5.34}; 
                         ~              ^~~
main.cpp:6:46: warning: implicit conversion loses floating-point precision: 'double' to 'float' [-Wconversion]
  float ultarCloud [9] = {12.04, 17.33, 8.9, 2.1, 13.75, 23.2, 25.0, 19.0, 5.34}; 
                         ~                   ^~~
main.cpp:6:58: warning: implicit conversion loses floating-point precision: 'double' to 'float' [-Wconversion]
  float ultarCloud [9] = {12.04, 17.33, 8.9, 2.1, 13.75, 23.2, 25.0, 19.0, 5.34}; 
                         ~                               ^~~~
main.cpp:6:76: warning: implicit conversion loses floating-point precision: 'double' to 'float' [-Wconversion]
  float ultarCloud [9] = {12.04, 17.33, 8.9, 2.1, 13.75, 23.2, 25.0, 19.0, 5.34}; 
                         ~                                                 ^~~~
main.cpp:13:5: warning: implicitly declaring library function 'printf' with type 'int (const char *, ...)'
    printf("\n\t\tPlease enter your Ultra-Cloud account No.:"); 
    ^
main.cpp:13:5: note: include the header <stdio.h> or explicitly provide a declaration for 'printf'
main.cpp:14:5: warning: implicitly declaring library function 'scanf' with type 'int (const char *restrict, ...)'
    scanf(" %d", &account); 
    ^
main.cpp:14:5: note: include the header <stdio.h> or explicitly provide a declaration for 'scanf'
main.cpp:14:19: error: use of undeclared identifier 'account'; did you mean 'accountNo'?
    scanf(" %d", &account); 
                  ^~~~~~~
                  accountNo
main.cpp:8:7: note: 'accountNo' declared here
  int accountNo; 
      ^
main.cpp:21:13: warning: using the result of an assignment as a condition without parentheses [-Wparentheses]
  if (found = 1) 
      ~~~~~~^~~
main.cpp:21:13: note: place parentheses around the assignment to silence this warning
  if (found = 1) 
            ^
      (        )
main.cpp:21:13: note: use '==' to turn this assignment into an equality comparison
  if (found = 1) 
            ^
            ==
main.cpp:25:2: warning: no newline at end of file [-Wnewline-eof]
}
 ^
11 warnings and 1 error generated.
